<resources>
    <string name="app_id">152837841401121</string>
    <string name="app_name">BeClub</string>
    <string name="action_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="close">Close</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to logout from BeClub?</string>
    <string name="account_delete_message">Are you really sure you want to delete your BeClub account? You\'ll be missing out!</string>
    <string name="account_deleted">Account deleted. Your BeClub account has been successfully deleted. We\'re going to miss you </string>
    <string name="connection_error">Oops. Looks like you\'re not connected to the Internet. Please check your connection and try again.</string>
    <string name="email_not_valid">Email address not valid</string>
    <string name="something_wrong">Mm, something went wrong</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="value_bedollars">%d BeDollars</string>
    <string name="value_no_bedollars">%d</string>
    <string name="loading_dialog">Loading...</string>
    <string name="header_my_balance">My Balance</string>
    <string name="member_entry">Welcome to Beintoo</string>
    <string name="lateral_menu_bestore">BeStore</string>
    <string name="lateral_menu_earn_bedollars">Earn BeDollars</string>
    <string name="lateral_menu_wallet">Wallet</string>
    <string name="facebook_login">CONNECT WITH FACEBOOK</string>
    <string name="signup_by_email">Register by email</string>
    <string name="existing_account">I already have an account</string>
    <string name="register_title">Register</string>
    <string name="account_details">ACCOUNT DETAILS</string>
    <string name="account_details_email">Your email address</string>
    <string name="account_details_email_error">Invalid email</string>
    <string name="account_details_email_warning">Is this correct? We\'ll ask you to verify this address to access all the features of the BeClub</string>
    <string name="account_email_already_registered">You\'ve already registered to the BeClub. Sign in now</string>
    <string name="account_details_password">Password (min 8 characters)</string>
    <string name="account_details_password_error">Password too short (min 8 characters)</string>
    <string name="account_coppa_compliant">Sorry, we were unable to process your registration</string>
    <string name="personal_details">PERSONAL DETAILS</string>
    <string name="personal_details_firstname">First name</string>
    <string name="personal_details_firstname_error">Please provide your first name</string>
    <string name="personal_details_lastname">Last name</string>
    <string name="personal_details_lastname_error">Please provide your last name</string>
    <string name="personal_details_birthday">Birthday</string>
    <string name="personal_details_birthday_error">Please provide your date of birth</string>
    <string name="personal_details_male">Male</string>
    <string name="personal_details_female">Female</string>
    <string name="personal_details_gender_error">Please select</string>
    <string name="fb_information_missing">Hi there,\n\nWelcome to the BeClub! You look nice today!\n\nFill in the fields below to complete your BeClub account. From now on, you’ll be able to log into your account with Facebook.</string>
    <string name="register_disclaimer"><![CDATA[By registering with the BeClub you accept our <a href="http://static.beintoo.com/beclub-app/help/tos.html"><b>Terms of Service and Privacy policy</b></a>. Your information will not be shared with third parties.]]></string>
    <string name="register_required_info">This information is required by our Terms of Service and allows us to provide you with a better BeClub experience.</string>
    <string name="register_button">Register now</string>
    <string name="register_fruit_ninja_title">Coming from Fruit Ninja?</string>
    <string name="register_fruit_ninja_msg">Log in with Facebook to access your BeClub account</string>
    <string name="postsignup_1">Welcome to the</string>
    <string name="postsignup_2">Here\'s your welcome gift</string>
    <string name="postsignup_3">10 BeDollars</string>
    <string name="postsignup_4">We\'ve also sent you an email at</string>
    <string name="postsignup_5">Follow the instructions in the email to verify your account and access all BeClub features</string>
    <string name="postsignup_get_started">Get Started</string>
    <string name="postsignup_why_required">Why is this step required?</string>
    <string name="postsignup_why_verification">Why we require this step</string>
    <string name="postsignup_why_verification_text">To become a fully registered BeClub, we\'ll ask you to verify the email address you used to create your account. That way, we will be able to make sure that any rewards you receive via BeClub will be sent to the right address and that the email address doesn\'t belong to someone else. When you complete the registration process, we\'ll send you an email requesting that you verify your account. To verify, just follow the link in the message. You will be able to earn BeDollars but you will not be able to redeem any rewards until your account has been verified.</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="forgot_password_title">Forgotten your password?</string>
    <string name="forgot_password_message">Not to worry! Fill in your email below to receive instructions on how can reset your password.</string>
    <string name="forgot_password_email">Your email address</string>
    <string name="forgot_password_sent"> We\'ve just sent you an email. Check your inbox and follow the instructions</string>
    <string name="signin">Sign In</string>
    <string name="signin_email">Email address</string>
    <string name="signin_password">Password</string>
    <string name="already_existing">Hey! Looks like you\'re already earning BeDollars</string>
    <string name="already_existing_message">Choose your preferred email address to become an exclusive BeClub member</string>
    <string name="already_use_another">Use another account</string>
    <string name="bestore_redeem">Redeem</string>
    <string name="bestore_terms">Terms of use</string>
    <string name="bestore_redemption_instructions">Redemption instructions</string>
    <string name="bestore_expire">Expires on:</string>
    <string name="bestore_not_enough">Oh no! You don\'t have enough BeDollars for this reward yet</string>
    <string name="bestore_discover">Earn more BeDollars</string>
    <string name="bestore_url_coupon">Click here to view your reward</string>
    <string name="bestore_url_and_number_coupon">Click here to use your reward</string>
    <string name="bestore_url_follow">It\'s easy. Follow the link to get your coupon</string>
    <string name="bestore_counter_show">Show this at the checkout counter</string>
    <string name="bestore_buydialog_title">Confirm</string>
    <string name="bestore_buydialog_message">Are you sure you want to redeem this reward for %dBeDollars?</string>
    <string name="bestore_buydialog_positive">Continue</string>
    <string name="bestore_coupon_not_available">Oh no! This coupon isn\'t available right now. Check back for more details</string>
    <string name="bestore_buydialog_negative">Cancel</string>
    <string name="bestore_buydialog_bought">Great! Your reward has now been saved to your wallet</string>
    <string name="bestore_buydialog_archive">Archive</string>
    <string name="bestore_archived_message">Your reward has now been archived</string>
    <string name="bestore_stores_button">See all participating stores</string>
    <string name="bestore_empty">We\'re sorry but there are no rewards in the BeStore right now. We\'re working hard to bring you the latest great deals. Check back soon!</string>
    <string name="bestore_missing_bedollars_for_reward">Keep going! You just need %d more BeDollars</string>
    <string name="bestore_bedollars_for_reward">Nice! You\'ve got enough BeDollars</string>
    <string name="bestore_missing_bedollars_percentage">%d%%</string>
    <string name="earn_bedollars_brands">BRANDS</string>
    <string name="earn_bedollars_apps">APPS</string>
    <string name="earn_bedollars_instore_header_title">COMPLETE MISSIONS TO EARN BEDOLLARS</string>
    <string name="earn_bedollars_online_header_title">EARN BEDOLLARS WHEN YOU BUY THESE ITEMS</string>
    <string name="earn_bedollars_t">Pick up awesome rewards from <b>top brands</b></string>
    <string name="earn_bedollars_map_title">Pick up <b>BeDollars</b> by visiting stores near you now</string>
    <string name="earn_bedollars_walkin_main_title"><![CDATA[Find out how you can earn BeDollars simply by <b>walking into your favorite stores</b>]]></string>
    <string name="earn_bedollars_walkin_anytime_title">Walk-in mission</string>
    <string name="earn_bedollars_walkin_anytime_desc">Check-in at the store</string>
    <string name="earn_bedollars_walkin_specialday_title">Special day walk-in</string>
    <string name="earn_bedollars_walkin_specialday_desc">Check-in at the store on:</string>
    <string name="earn_bedollars_walkin_desc">Check-in as soon as you get to the store!</string>
    <string name="earn_bedollars_walkin_done">Done!</string>
    <string name="earn_bedollars_walkin_store_closed">Sorry, the store\'s closed right now, come back later</string>
    <string name="earn_bedollars_scanning_title">Scan now</string>
    <string name="earn_bedollars_scanning_desc">Scan the products shown</string>
    <string name="earn_bedollars_scann_to_earn">You\'ll pick up an awesome reward</string>
    <string name="earn_bedollars_multiplescanning_windowtitle">Scan any product of your choice</string>
    <string name="earn_bedollars_multiplescanning_title">Look for the closest store</string>
    <string name="earn_bedollars_multiplescanning_desc">Then scan any product of your choice</string>
    <string name="earn_bedollars_multiplescanning_stores">STORES NEAR YOU</string>
    <string name="earn_bedollars_multiplescanning_top"><![CDATA[You are at <b>%s</b>. Scan the number of products listed below to earn]]></string>
    <string name="earn_bedollars_multiplescanning_nolocation"><![CDATA[<font size="18"><b>Oops! Looks like you aren\'t in a store yet.</b></font><br><br>Go to the store and start scanning.]]></string>
    <string name="earn_bedollars_multiplescanning_already_done"><![CDATA[<font size="18"><b>Oops! Looks like you already completed this mission.</b></font><br><br>Come back in %s to complete it again.]]></string>
    <string name="earn_bedollars_multiplescanning_already_done_forever"><![CDATA[<font size="18"><b>Oops! Looks like you already completed this mission.</b></font>]]></string>
    <string name="earn_bedollars_multiplescanning_scan1">Scan any product of your choice</string>
    <string name="earn_bedollars_multiplescanning_scanother">Add another one!</string>
    <string name="earn_bedollars_multiplescanning_scanned">Scanned</string>
    <string name="earn_bedollars_multiplescanning_stores_title">Get to one of these stores and scan any product you find</string>
    <string name="earn_bedollars_multiplescanning_stores_title_w_reward">Get to one of these stores and scan any product you find to earn:</string>
    <string name="settings_profile_personal_required">This info is required by our Terms of Service. It also allows us to provide you with a better Beclub experience. We will not share your info with third parties.</string>
    <string name="settings_profile_update">Update profile</string>
</resources>